_scss/base.scss
body {
  margin-left: auto;
  margin-right: auto;
  width: 80%;
  display: grid;
  grid-template-columns: 10em auto 10em;
  grid-template-areas: 
      "header header header"
      "left   middle right"
      "footer footer footer";
}

.container {
  grid-area:middle;
  padding-top: 1.25em;
  background-image: linear-gradient(rgba(255,255,255,0.85), rgba(255,255,255,0.85)), url(https://kithwood.github.io/whaknbweb/assets/images/Moo-104x112.jpg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}

.rule-div {
  margin-left:auto;
  margin-right:auto;
  display:table;
  width:100%;
  height: 24px;
  margin-top:16px;
  background-image: url(https://kithwood.github.io/whaknbweb/assets/images/whaknb_naginata.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position:center;
}

.rule-img{
  max-width:100%;
}

.content {
  grid-area:middle;
}

@media(max-width: 1200px) {

  body {
    margin: 0px;
    margin-left:10%;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-areas: 
        "header"
        "middle"
        "footer";
    padding: 0px;
    font-size: 2.5em;
  }
}

